This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


next version - not released yet
===============================
+ Ticket #1556, Ability to move the player window by dragging the video area during DVD playback
+ Ticket #2251, Show hidden main menu with Alt key
+ Ticket #3284, Option to auto-hide mouse pointer in windowed mode during playback
+ Ticket #3379, "Left Up" mouse keybinding now allows to move the player window by dragging the video area
+ Ticket #3614, Do medium jumps when pressing mouse navigation buttons on the seekbar
+ New option to auto-hide docked panels together with toolbars
* More flexible auto-hide controls in fullscreen configuration options
* Updated LAV Filters to 0.59.1.35:
    - Ticket #3760, LAV Video: Fix a crash when opening some DVDs on 64-bit
* Updated Simplified and Traditional Chinese, Greek and Japanese translations
* Updated MediaInfoLib to v0.7.65
* Updated ZenLib to v0.4.29 r453
* Updated Little CMS to v2.6b (git 579b3aa)
* Updated Unrar to v5.0.0.13
! Ticket #1300/#2081, Toolbars auto-hiding now always works properly in multi-display configurations
! Ticket #3479, Improve the behavior of MPC-HC when some security tools prevent it
  from initializing correctly
! Ticket #3650, Improve the speed of subtitles toggling (on/off) and switching
! Ticket #3668, MPC-HC could crash when reloading the subtitles