@@ -74,5 +74,6 @@ public:
 
     STDMETHODIMP Render(SubPicDesc& spd, REFERENCE_TIME rt, double fps, RECT& bbox);
     STDMETHODIMP GetTextureSize(POSITION pos, SIZE& MaxTextureSize, SIZE& VirtualSize, POINT& VirtualTopLeft) { return E_NOTIMPL; }
+    STDMETHODIMP GetRelativeTo(POSITION pos, RelativeTo& relativeTo) { return E_NOTIMPL; }
 };
 
