@@ -148,6 +148,7 @@ public:
     STDMETHODIMP_(REFERENCE_TIME) GetStop(POSITION pos, double fps);
     STDMETHODIMP_(bool) IsAnimated(POSITION pos);
     STDMETHODIMP Render(SubPicDesc& spd, REFERENCE_TIME rt, double fps, RECT& bbox);
+    STDMETHODIMP GetRelativeTo(POSITION pos, RelativeTo& relativeTo);
 
     // IPersist
     STDMETHODIMP GetClassID(CLSID* pClassID);
@@ -191,6 +192,7 @@ public:
     STDMETHODIMP_(REFERENCE_TIME) GetStop(POSITION pos, double fps);
     STDMETHODIMP_(bool) IsAnimated(POSITION pos);
     STDMETHODIMP Render(SubPicDesc& spd, REFERENCE_TIME rt, double fps, RECT& bbox);
+    STDMETHODIMP GetRelativeTo(POSITION pos, RelativeTo& relativeTo);
 
     // IPersist
     STDMETHODIMP GetClassID(CLSID* pClassID);
